# DCapBot

./: .env.example  .gitignore  dcapbot.service  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-bot-foundation/: 01-02-SUMMARY.md
.planning/phases/02-payment-and-channel-access/: 02-01-SUMMARY.md  02-02-SUMMARY.md
.planning/phases/03-subscription-lifecycle/: 03-01-SUMMARY.md  03-02-SUMMARY.md
.planning/phases/04-admin-panel/: 04-01-SUMMARY.md  04-02-SUMMARY.md
alembic/: env.py
bot/: config.py  main.py
bot/db/: engine.py
bot/handlers/: admin.py  payment.py  user.py
bot/keyboards/: admin.py  user.py
bot/middlewares/: db.py  user.py
bot/models/: __init__.py  base.py  payment.py  subscription.py  user.py
bot/repositories/: admin.py  payment.py  subscription.py  user.py
bot/scheduler/: tasks.py
bot/services/: channel.py  payment.py  subscription.py
bot/webhooks/: yookassa.py
